<resources>
    <string name="app_name">Transbox</string>

    <!--common-->
    <string name="common_cancel">取 消</string>
    <string name="common_confirm">确 定</string>
    <string name="common_back">返 回</string>
    <string name="common_next">下一步</string>
    <string name="common_pre">预 览</string>
    <string name="common_confirmOk">确 认</string>
    <string name="common_start">启 动</string>
    <string name="common_close">关 机</string>
    <string name="common_finish">结 束</string>
    <string name="common_detail">详 细</string>
    <string name="common_openBox">开 箱</string>
    <string name="common_export">发送</string>
    <string name="common_nullToast">请完善所有信息!</string>
    <string name="common_psError">密码不正确!</string>
    <string name="common_may">可选</string>
    <string name="common_backMain">返回到主菜单</string>

    <!--main-->
    <string name="main_history">查历史</string>
    <string name="main_create">新转运</string>
    <string name="main_self">自检：</string>
    <string name="main_temp">温度：</string>
    <string name="main_power">电量：</string>

    <!--confirm-->
    <string name="confirm_ok">确定开始新转运？</string>
    <string name="confirm_desc">请根据红十字会要求如实填写转运信息。</string>

    <!--create-->
    <string name="create_hintNum">请输入器官段号</string>
    <string name="create_hintWhere">器官段号可在红十字会的二维码或器官确认书中获得</string>
    <string name="create_orgbasic_info">—— 器官基本信息 ——</string>
    <string name="create_orgblood_info">—— 器官血型信息 ——</string>
    <string name="create_category">器官类型</string>
    <string name="create_num">数量</string>
    <string name="create_bloodType">血型</string>
    <string name="create_getTime">获取器官时间：</string>
    <string name="create_choiceTime">点击选择时间</string>
    <string name="create_getOrgTime">获取时间：</string>
    <string name="create_hintBloodNum">血液样本数量</string>
    <string name="create_pre_hintBloodNum">血液样本数量：</string>
    <string name="create_hintOrgNum">组织样本数量</string>
    <string name="create_pre_hintOrgNum">组织样本数量：</string>
    <string name="create_hintOrgType">组织样本类型</string>
    <string name="create_pre_hintOrgType">组织样本类型：</string>
    <string name="create_hintTsManage">—— 转运单管理 ——</string>
    <string name="create_hintStart">转运起始地</string>
    <string name="create_pre_hintStart">转运起始地：</string>
    <string name="create_hintEnd">转运目的地</string>
    <string name="create_pre_hintEnd">转运目的地：</string>
    <string name="create_hintWay">转运方式</string>
    <string name="create_pre_hintWay">转运方式：</string>
    <string name="create_hintWayNum">航班 / 车次</string>
    <string name="create_pre_hintWayNum">航班 / 车次：</string>
    <string name="create_hintTsPerson">转运人</string>
    <string name="create_pre_hintTsPerson">转运人：</string>
    <string name="create_hintTsTel">电话</string>
    <string name="create_pre_hintTsTel">电话：</string>

    <string name="create_get_organization">获取组织</string>
    <string name="create_organizationInfo">—— OPO组织信息 ——</string>
    <string name="create_pre_organizationInfo">组织信息：</string>
    <string name="create_nullOpo">请选择opo组织信息</string>
    <string name="create_contact">联系人</string>
    <string name="create_pre_contact">联系人：</string>
    <string name="create_psSet">—— 设置开箱密码 ——</string>
    <string name="create_psExplain">密码有效期至本次转运结束</string>
    <string name="create_psSetConfirm">请再次确认输入的4位开箱密码</string>
    <string name="create_ps_diff">两次输入的密码不一致!</string>
    <string name="create_ps1">设置密码</string>
    <string name="create_ps2">确认密码</string>
    <string name="create_ps3">输入4位开箱密码(选填)</string>

    <!--create - 预览-->
    <string name="create_pre_duanhao">器官段号：</string>
    <string name="create_pre_duanhao2">器官段号：</string>
    <string name="create_pre_type">器官类型：</string>
    <string name="create_pre_num">器官数量：</string>
    <string name="create_pre_num2">器官数量</string>
    <string name="create_pre_bloodType">血型：</string>

    <string name="create_ok_title">本次转运信息已经生成</string>
    <string name="create_ok_tsOddNum">转运单号：</string>
    <string name="create_ok_tshint">转运信息已发送至手机</string>
    <string name="create_ok_tsPsSend">已发送至手机</string>
    <string name="create_ok_hint">点击启动后将开启转运监控</string>
    <string name="create_ok_new">点击启动后将生成转运单，开启转运监控</string>
    <string name="create_ok_newExplain">转运信息请至手机APP修改或查看</string>
    <string name="create_ok_save">保存,将进入待转运状态</string>
    <!--运输过程中-->
    <string name="on_page1">—— 数据监控 ——</string>
    <string name="on_tem_current">当前温度：</string>
    <string name="on_tem_mean">平均温度：</string>
    <string name="on_tem_location">当前位置：</string>
    <string name="on_tem_distance">剩余距离：</string>
    <string name="on_time_start">开始时间：</string>
    <string name="on_time_duration">持续时间：</string>
    <string name="on_time_end_remainBattery">剩余电量：</string>
    <string name="on_time_useBattery">消耗电量：</string>
    <string name="on_time_humidity">湿度监控：</string>
    <string name="on_excep_openBoxTime">开箱时间</string>
    <string name="on_excep_crashTime">碰撞时间</string>

    <!--确定结束当前转运-->
    <string name="confirm_close_currentTs">结束转运需输入4位开箱密码</string>
    <string name="confirm_openbox">请输入4位开箱密码</string>

    <!--转运结束-->
    <string name="end_title">转运结束，1小时后将自动关机</string>
    <string name="end_useTime">转运耗时：</string>
    <string name="end_mean">平均温度：</string>
    <string name="end_remainBattery">剩余电量：</string>

    <!--确认关机-->
    <string name="close_device">确认关机？</string>

    <!--查询-->
    <string name="query_ts">—— 历史查询 ——</string>
    <string name="query_ts_oddNum">输入历史转运单号</string>
    <string name="query_ts_orgNum">输入历史器官段号</string>
    <string name="query_ts_query">查询</string>

    <!--转运详情-->
    <string name="ts_oddNum">转运单号：</string>
    <string name="ts_oddTime">转运时间：</string>
    <string name="ts_orgPartNum">器官段号：</string>
    <string name="ts_orgType">器官类型：</string>
    <string name="ts_export">导出</string>
    <string name="ts_recordInfo">转运监控信息</string>

    <!--导出-->
    <string name="export_phone">请输入手机号</string>
    <string name="export_explain">我们将向此手机号发送所查询转运的详细记录,本次查询将记录在案</string>
    <string name="export_phoneNull">手机号不能为空!</string>
    <string name="export_phoneError">手机号不正确!</string>
    <string name="export_title">—— 导出信息 ——</string>

    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="title_alert">提示信息</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>

</resources>