<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="presenter"
            type="com.otqc.transbox.controller.mixture.ItemDetailPresenter" />

        <variable
            name="info"
            type="com.otqc.transbox.controller.mixture.ItemDetailData" />
    </data>

    <LinearLayout
        style="@style/rootBasic"
        android:orientation="vertical">

        <ScrollView
            android:layout_weight="1"
            style="@style/weight_ll_vertical"
            android:layout_marginLeft="@dimen/offset_left_ll">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/tv_title2"
                    android:text="@string/create_orgbasic_info" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            style="@style/tv_pre_left"
                            android:text="@string/create_pre_duanhao" />

                        <TextView
                            android:id="@+id/tv_organ_seg"
                            style="@style/tv_pre_right"

                        />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            style="@style/tv_pre_left"
                            android:text="@string/create_getOrgTime" />

                        <TextView
                            android:id="@+id/tv_time"
                            style="@style/tv_pre_right"
                            />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    style="@style/tv_title2"
                    android:text="@string/create_orgblood_info" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            style="@style/tv_pre_left"
                            android:text="@string/create_pre_type" />

                        <TextView
                            android:id="@+id/tv_organ"
                            style="@style/tv_pre_right"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            style="@style/tv_pre_left"
                            android:text="@string/create_pre_num" />

                        <TextView
                            android:id="@+id/tv_organ_num"
                            style="@style/tv_pre_right"
                            />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            style="@style/tv_pre_left"
                            android:text="@string/create_pre_bloodType" />

                        <TextView
                            android:id="@+id/tv_blood"
                            style="@style/tv_pre_right"
                             />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            style="@style/tv_pre_left"
                            android:text="@string/create_pre_hintBloodNum" />

                        <TextView
                            android:id="@+id/tv_blood_num"
                            style="@style/tv_pre_right"
                            />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            style="@style/tv_pre_left"
                            android:text="@string/create_pre_hintOrgType" />

                        <TextView
                            android:id="@+id/tv_sample"
                            style="@style/tv_pre_right"
                           />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            style="@style/tv_pre_left"
                            android:text="@string/create_pre_hintOrgNum" />

                        <TextView
                            android:id="@+id/tv_sample_num"
                            style="@style/tv_pre_right"
                           />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    style="@style/tv_title2"
                    android:text="@string/create_hintTsManage" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            style="@style/tv_pre_left"
                            android:text="@string/create_pre_hintStart" />

                        <TextView
                            android:id="@+id/tv_start"
                            style="@style/tv_pre_right"
                           />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            style="@style/tv_pre_left"
                            android:text="@string/create_pre_hintEnd" />

                        <TextView
                            android:id="@+id/tv_end"
                            style="@style/tv_pre_right"
                           />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            style="@style/tv_pre_left"
                            android:text="@string/create_pre_hintTsPerson" />

                        <TextView
                            android:id="@+id/tv_person"
                            style="@style/tv_pre_right"
                             />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            style="@style/tv_pre_left"
                            android:text="@string/create_pre_hintTsTel" />

                        <TextView
                            android:id="@+id/tv_person_phone"
                            style="@style/tv_pre_right"
                            />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    style="@style/tv_title2"
                    android:text="@string/create_organizationInfo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            style="@style/tv_pre_left"
                            android:text="@string/create_pre_organizationInfo" />

                        <TextView
                            android:id="@+id/tv_opo"
                            style="@style/tv_pre_right"
                           />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            style="@style/tv_pre_left"
                            android:text="@string/create_pre_contact" />

                        <TextView
                            android:id="@+id/tv_opo_name"
                            style="@style/tv_pre_right"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            style="@style/tv_pre_left"
                            android:text="@string/create_pre_hintTsTel" />

                        <TextView
                            android:id="@+id/tv_opo_phone"
                            style="@style/tv_pre_right"
                           />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            style="@style/tv_pre_left"
                            android:text="@string/create_pre_hintWay" />

                        <TextView
                            android:id="@+id/tv_transfer"
                            style="@style/tv_pre_right"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            style="@style/tv_pre_left"
                            android:text="@string/create_pre_hintWayNum" />

                        <TextView
                            android:id="@+id/tv_no"
                            style="@style/tv_pre_right"
                            />
                    </LinearLayout>
                </LinearLayout>

                <com.amap.api.maps.MapView
                    android:id="@+id/id_finish_map"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_marginBottom="20dp"
                    android:visibility="@{ info.records.size() > 0 ? View.VISIBLE : View.GONE }" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:visibility="@{ info.records.size() > 0 ? View.VISIBLE : View.GONE }">

                    <WebView
                        android:id="@+id/webView"
                        android:layout_width="match_parent"
                        android:layout_height="200dp" />

                    <WebView
                        android:id="@+id/wv"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="20dp" />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/btnBlueSolid1"
                android:onClick="@{ () -> presenter.back()}"
                android:text="@string/common_back" />

            <Button
                android:visibility="gone"
                style="@style/btnBlueSolid"
                android:onClick="@{ () -> presenter.goExport()}"
                android:text="@string/ts_export" />
        </RelativeLayout>

    </LinearLayout>

</layout>